# ModelingMobileSystem

./: .gitignore  CMakeLists.txt
1lab/: bits_operation.cpp  header.hpp  main.cpp
2lab/: Makefile  main.cpp
2lab/include/: header.hpp
2lab/src/: bits_operation.cpp  error_detector.cpp  main.cpp
functions/: ber.cpp  bits_operation.cpp  chanel_model.cpp  error_detector.cpp  interleaving.cpp  modulator.cpp  ofdm_modulator.cpp
include/: header.hpp
src/: back.cpp  main.cpp
